T-28: Fixing jumps of text on 1px up when text input gets focus

--- a/src/app/styles/includes/styles.scss
+++ b/src/app/styles/includes/styles.scss
@@ -410,6 +410,7 @@ md-input-container {
         height: 30px;
         -ms-flex-preferred-size: 26px;
         padding-top: 0px;
+        padding-bottom: 1px;
 
         &:focus {
         }
